feat: --- Correction de la partie concernant la redistribution des gains.